--- a/RenderingEngine.vcxproj
+++ b/RenderingEngine.vcxproj
@@ -156,6 +156,7 @@
     <ClCompile Include="Mouse.cpp" />
     <ClCompile Include="PixelShader.cpp" />
     <ClCompile Include="PointLight.cpp" />
+    <ClCompile Include="Rasterizer.cpp" />
     <ClCompile Include="RException.cpp" />
     <ClCompile Include="RXM.cpp" />
     <ClCompile Include="Sampler.cpp" />
@@ -212,6 +213,7 @@
     <ClInclude Include="PixelShader.h" />
     <ClInclude Include="Plane.h" />
     <ClInclude Include="PointLight.h" />
+    <ClInclude Include="Rasterizer.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="RException.h" />
     <ClInclude Include="RMath.h" />
