--- a/.gitignore
+++ b/.gitignore
@@ -23,15 +23,12 @@ mono_crash.*
 [Rr]eleases/
 x64/
 x86/
-[Ww][Ii][Nn]32/
-[Aa][Rr][Mm]/
-[Aa][Rr][Mm]64/
 bld/
 [Bb]in/
+
 [Oo]bj/
-[Oo]ut/
 [Ll]og/
-[Ll]ogs/
+
 
 # Visual Studio 2015/2017 cache/options directory
 .vs/
@@ -77,9 +74,12 @@ StyleCopReport.xml
 *.meta
 *.obj
 !Models/**/*.obj
+!assimp/bin/*
 *.iobj
 *.pch
 *.pdb
+!dxtex/bin/
+!dxtex/bin/**/*
 *.ipdb
 *.pgc
 *.pgd
